[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15"
openai = "^0.25"
bs4 = "^0.0"

[tool.poetry.dev-dependencies]
black = "^22.10"
pycodestyle = "^2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
